--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "^6.4.3",
+    "@mui/x-date-pickers": "^7.27.0",
     "dayjs": "^1.11.13",
     "next": "15.1.7",
     "react": "^19.0.0",
