--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^8",
     "eslint-config-next": "15.1.7",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "prettier": "^3.5.3",
     "typescript": "^5",
     "typescript-eslint": "^8.24.1"
   }
