--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3",
     "@stylistic/eslint-plugin": "^4.0.1",
     "@svgr/webpack": "^8.1.0",
