--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
+    "semantic-release": "^24.2.3",
     "typescript": "^5",
     "typescript-eslint": "^8.24.1"
   },
