--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@stylistic/eslint-plugin": "^4.0.1",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
