refactor: semantic-release 설정 수정

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "today-webapp-nextjs",
   "version": "0.1.4",
   "private": true,
+  "description": "\"오늘 뭐 입지?\"는 사용자가 보유한 옷들을 등록하고, 원하는 기간에 대해 날짜별로 옷을 조합한 착장을 제시해주는 서비스입니다.",
+  "main": "index.js",
+  "author": "Lee Jae Yeol <jayur830@naver.com>",
+  "license": "MIT",
   "scripts": {
     "prepare": "husky",
     "dev": "next dev",
@@ -48,11 +52,6 @@
     "typescript": "^5",
     "typescript-eslint": "^8.24.1"
   },
-  "description": "\"오늘 뭐 입지?\"는 사용자가 보유한 옷들을 등록하고, 원하는 기간에 대해 날짜별로 옷을 조합한 착장을 제시해주는 서비스입니다.",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
