--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,10 @@
 {
+  "branches": [
+    "main"
+  ],
   "tagFormat": "release-${version}",
   "plugins": [
+    "@semantic-release/npm",
     [
       "@semantic-release/git",
       {
