--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,8 @@ jobs:
         with:
           node-version: 'lts/*'
       - name: Install dependencies
+        env:
+          HUSKY: 0
         run: yarn
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
