--- a/.releaserc
+++ b/.releaserc
@@ -62,9 +62,13 @@
     [
       "@semantic-release/git",
       {
-        "assets": "package.json",
+        "assets": [
+          "package.json",
+          "CHANGELOG.md"
+        ],
         "message": "ci: ${nextRelease.version}"
       }
-    ]
+    ],
+    "@semantic-release/github"
   ]
 }
