--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "plugins": ["simple-import-sort", "unused-imports", "prettier"],
